--- a/about.html
+++ b/about.html
@@ -43,14 +43,14 @@
         </div>  
 
         <div id="full_bio_btn">
-            <div onclick="smoothScroll(document.querySelector('#about-full'))">
+            <a data-scroll href="#full-version">
                 Click for Full Bio
-            </div>
+            </a>
         </div>
 
     </div>
 
-    <div class="about_full" id="about-full">
+    <div class="about_full" id="full-version">
         <div id="content">
             Om Raj is a Nepalese actor and writer. He was born in Middle Asia Nepal, grew up in Dhading
             and Kathmandu, and came to the United States in his late teen. He is currently based in New
