--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
       </a>
         </ul>
     </nav>
-    <div class="main_div">
+    <div class="main-div">
         <img src="src/8.jpg" alt="main prof pic">
     </div>
 
-    <div class="main_div_overlay">
+    <div class="main-div-overlay">
         ACTOR
     </div>
 
-    <div class="first_section">
+    <div class="first-section">
 
         <h2>Featured Recent Projects</h2>
 
-        <div class="projects_section">
+        <div class="projects-section">
             <div id="left">
             <figure>
                 <img src="./src/article_1.jpeg" alt="">
@@ -72,7 +72,7 @@
 
         </div>
 
-        <div id="more_projects_btn">
+        <div id="more-projects-btn">
             <a href="./shows.html">More Projects</a>
         </div>
 
