added almost full responsiveness

--- a/headshots.html
+++ b/headshots.html
@@ -42,11 +42,15 @@
         <div class = "section-2">
             <img src="src/4.jpg" alt="">
             <img src="src/5.jpeg" alt="">
-            <img src="src/6.jpg" alt="">
         </div>
 
         <div class="section-3">
             <img src="src/2.jpg" alt="">
+        </div>
+
+        <div class="section-4">
+            <img src="src/6.jpg" alt="">
+            <img src="src/9.jpeg" alt="">
         </div>
     </div>
 
