--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
             </div>
 
             <div class="contact-form">
-                <h2>Hit me up</h2>
+                <h2>Contact me.</h2>
                 <form id="contact-form-content">
                     <div id = "form-item"> 
                         <label for="firstname"> First name : </label>
