added full responsive navbar

--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,10 @@
         <div class="footer_header">
             <span id="email">omrajraut480@gmail.com</span>
             <span id="name">Om Raj Raut</span>
-            <span id="ig_icon"><img src="./src/icons/ig_white.png" alt="" width="5%"></span>
+            <a href="https://www.instagram.com/reyan_razz/" ></a>
+            <span id="ig_icon">
+                <img src="./src/icons/ig_white.png" alt="">
+            </span>
         </div>
         <div class="footer_navbar">
             <li><a href="./">Home</a></li>
