added full responsive navbar

--- a/index.html
+++ b/index.html
@@ -113,10 +113,11 @@
         <div class="footer_header">
             <span id="email">omrajraut480@gmail.com</span>
             <span id="name">Om Raj Raut</span>
-            <a href="https://www.instagram.com/reyan_razz/" ></a>
+            <a href="https://www.instagram.com/reyan_razz/" >
             <span id="ig_icon">
                 <img src="./src/icons/ig_white.png" alt="">
             </span>
+            </a>
         </div>
         <div class="footer_navbar">
             <li><a href="./">Home</a></li>
