--- a/resume.html
+++ b/resume.html
@@ -74,7 +74,7 @@
     
     </header>    
     <div class = "resume-wrapper">
-        <embed src="./src/docs/resume.pdf" width="100%" height="100%" />
+        <embed src="../src/docs/resume.pdf" width="100%" height="100%" />
     </div>
 
     <footer class="footer">
