--- a/shows.html
+++ b/shows.html
@@ -96,7 +96,10 @@
         <figure id="first-figure">
             <img src="./src/article_1.jpeg" alt="">
             <figcaption>
-                The House of the Spirits (Marian Andernson Theater,2020) 
+                The House of the Spirits 
+                <br>
+                (Marian Andernson Theater,2020) 
+                <br>
                 by Caridad Svich, adapted from the novel by Isabel Allende
             </figcaption>
         </figure>
@@ -105,9 +108,10 @@
             <img src="./src/article_2.jpeg" alt="">
             <figcaption>
                 1953: Race For The Summit (Solo Show)
+                <br>
                 Written, Acted, and directed by Om Raj Raut 
-                (NYsummer Theatre Fesival 2021, Frigid New York theatre festival 2020,
-                Theatre for New City play Reading 2020) 
+                <br>
+                (NYsummer Theatre Fesival 2021, Frigid New York theatre festival 2020, Theatre for New City play Reading 2020) 
             </figcaption>
         </figure>
 
@@ -115,21 +119,27 @@
         <figure id="third-figure">
             <img src="./src/show-1.jpeg" alt="">
             <figcaption>
-                A Night With Mao  ( International Theatre Festival Kolkata India)
+                A Night With Mao  
+                <br>
+                ( International Theatre Festival Kolkata India)
             </figcaption>
         </figure>
           
         <figure id="fourth-figure">
             <img src="./src/show-2.jpeg" alt="">
             <figcaption>
-                Lysistrata  (Producer Club theater, Times Square, 2020)
+                Lysistrata  
+                <br>
+                (Producer Club theater, Times Square, 2020)
             </figcaption>
         </figure>
 
         <figure id="fifth-figure">
             <img src="./src/show-3.jpeg" alt="">
             <figcaption>
-                A Night With Mao  ( International Theatre Festival Kolkata India)
+                A Night With Mao  
+                <br>
+                ( International Theatre Festival Kolkata India)
             </figcaption>
         </figure>
         
