fixed shows caption

--- a/shows.html
+++ b/shows.html
@@ -137,9 +137,9 @@
         <figure id="fifth-figure">
             <img src="./src/show-3.jpeg" alt="">
             <figcaption>
-                A Night With Mao  
+                King Lear 
                 <br>
-                ( International Theatre Festival Kolkata India)
+                (Marian Andernson Theater, backstage,2019) 
             </figcaption>
         </figure>
         
