--- a/headshots.html
+++ b/headshots.html
@@ -124,8 +124,8 @@
         <div class="footer_navbar">
             <li><a href="./">Home</a></li>
             <li><a href="./about.html">About</a></li>
-            <li><a href="./gallery.html">Gallery</a></li>
-            <li><a href="./media.html">Media</a></li>
+            <li><a href="./shows.html">Gallery</a></li>
+            <li><a href="./video.html">Video</a></li>
             <li><a href="./contact.html">Contact</a></li>
         </div>
     </footer></body>
