6/24/2024 addressed latest comments

--- a/gallery.html
+++ b/gallery.html
@@ -114,7 +114,7 @@
 
 
     <link rel="stylesheet" href="./assets/style/style.css">
-    <header>
+    <header class="header">
         <div class="header-inner">
 
 
@@ -152,7 +152,7 @@
             </div>
 
             <div class="right-container">
-                <div class="city-name">NEW YORK CITY</div>
+                <div class="city-name">ACTOR | NEW YORK CITY</div>
 
                 <div class="links-box">
 
@@ -170,8 +170,8 @@
                                 height="30" width="35" /></a>
                     </div>
                     <div class="img-outer link-social">
-                        <a href="https://vimeo.com/user213916117"> <img class="link"
-                                src="assets/icons/vimeo.svg" height="30" width="35" /></a>
+                        <a href="https://vimeo.com/user213916117"> <img class="link" src="assets/icons/vimeo.svg"
+                                height="30" width="35" /></a>
                     </div>
                 </div>
             </div>
@@ -240,18 +240,25 @@
             </div>
             <div class="inner">
                 <div class="top">
-                    <img src="./assets/img/headshot_gallery/headshots-1.jpg" alt="" class="i1 flex-item larger-view-option">
-                    <img src="./assets/img/headshot_gallery/headshots-2.jpg" alt="" class="i2 flex-item larger-view-option">
-                    <img src="./assets/img/headshot_gallery/headshots-3.jpg" alt="" class="i3 flex-item larger-view-option">
-                    <img src="./assets/img/headshot_gallery/headshots-4.jpg" alt="" class="i4 flex-item larger-view-option">
+                    <img src="./assets/img/headshot_gallery/headshots-1.jpg" alt=""
+                        class="i1 flex-item larger-view-option">
+                    <img src="./assets/img/headshot_gallery/headshots-4.jpg" alt=""
+                        class="i4 flex-item larger-view-option">
+                    <img src="./assets/img/headshot_gallery/headshots-7.jpg" alt=""
+                        class="i3 flex-item larger-view-option">
+                    <img src="./assets/img/headshot_gallery/headshots-8.jpg" alt=""
+                        class="i4 flex-item larger-view-option">
                 </div>
                 <div class="bottom">
-                    <div class="top">
-                        <img src="./assets/img/headshot_gallery/headshots-5.jpg" alt="" class="i1 flex-item larger-view-option">
-                        <img src="./assets/img/headshot_gallery/headshots-6.jpg" alt="" class="i2 flex-item larger-view-option">
-                        <img src="./assets/img/headshot_gallery/headshots-7.jpg" alt="" class="i3 flex-item larger-view-option">
-                        <img src="./assets/img/headshot_gallery/headshots-8.jpg" alt="" class="i4 flex-item larger-view-option">
-                    </div>
+
+                    <img src="./assets/img/headshot_gallery/headshots-6.jpg" alt=""
+                        class="i2 flex-item larger-view-option">
+                    <img src="./assets/img/headshot_gallery/headshots-2.jpg" alt=""
+                        class="i2 flex-item larger-view-option">
+                    <img src="./assets/img/headshot_gallery/headshots-5.jpg" alt=""
+                        class="i1 flex-item larger-view-option">
+                    <img src="./assets/img/headshot_gallery/headshots-3.jpg" alt=""
+                        class="i3 flex-item larger-view-option">
                 </div>
             </div>
         </section>
@@ -267,18 +274,16 @@
 
             <div class="inner">
                 <div class="top">
-                    <img src="./assets/img/editorial/editorial-1.jpeg" alt="" class="i1 flex-item larger-view-option">
+                        <img src="./assets/img/editorial/editorial-6.jpg" alt="" class="i2 flex-item larger-view-option">
+                        <img src="./assets/img/editorial/editorial-5.jpg" alt="" class="i1 flex-item larger-view-option">
+                        <img src="./assets/img/editorial/editorial-8.JPG" alt="" class="i4 flex-item larger-view-option">
+                        <img src="./assets/img/editorial/editorial-1.jpeg" alt="" class="i1 flex-item larger-view-option">
+                </div>
+                <div class="bottom">
                     <img src="./assets/img/editorial/editorial-2.jpeg" alt="" class="i2 flex-item larger-view-option">
                     <img src="./assets/img/editorial/editorial-3.jpeg" alt="" class="i3 flex-item larger-view-option">
                     <img src="./assets/img/editorial/editorial-4.jpeg" alt="" class="i4 flex-item larger-view-option">
-                </div>
-                <div class="bottom">
-                    <div class="top">
-                        <img src="./assets/img/editorial/editorial-5.jpg" alt="" class="i1 flex-item larger-view-option">
-                        <img src="./assets/img/editorial/editorial-6.jpg" alt="" class="i2 flex-item larger-view-option">
-                        <img src="./assets/img/editorial/editorial-7.JPG" alt="" class="i3 flex-item larger-view-option">
-                        <img src="./assets/img/editorial/editorial-8.JPG" alt="" class="i4 flex-item larger-view-option">
-                    </div>
+                    <img src="./assets/img/editorial/editorial-7.JPG" alt="" class="i3 flex-item larger-view-option">
                 </div>
             </div>
 
@@ -293,23 +298,29 @@
             <div class="inner">
 
                 <div class="top">
+                    <div class="img-container">
+                        <img src="./assets/img/productions/production-4.jpg" alt="" class="i1 flex-item larger-view-option">
+                    </div>
+                    <img src="./assets/img/productions/production-5.jpeg" alt="" class="i2 flex-item larger-view-option">
                     <img src="./assets/img/productions/production-1.jpg" alt="" class="i1 flex-item larger-view-option">
-                    <img src="./assets/img/productions/production-2.jpeg" alt="" class="i2 flex-item larger-view-option">
-                    <img src="./assets/img/productions/production-3.jpg" alt="" class="i3 flex-item larger-view-option">
+
                 </div>
 
                 <div class="mid">
-                    <img src="./assets/img/productions/production-4.jpg" alt="" class="i1 flex-item larger-view-option">
-                    <img src="./assets/img/productions/production-5.jpeg" alt="" class="i2 flex-item larger-view-option">
-                    <img src="./assets/img/productions/production-6.jpg" alt="" class="i3 flex-item larger-view-option">
+                    <img src="./assets/img/productions/production-8.png" alt="" class="i2 flex-item larger-view-option">
+                    <img src="./assets/img/productions/production-3.jpg" alt="" class="i3 flex-item larger-view-option">
+                    <!-- <div class="img-container"> -->
+                        <img src="./assets/img/productions/production-2.jpeg" alt="" class="i2 flex-item larger-view-option">
+                    <!-- </div> -->
                 </div>
 
                 <div class="bottom">
-                    <div class="top">
+                        <img src="./assets/img/productions/production-6.jpg" alt="" class="i3 flex-item larger-view-option">
                         <img src="./assets/img/productions/production-7.jpeg" alt="" class="i1 flex-item larger-view-option">
-                        <img src="./assets/img/productions/production-8.png" alt="" class="i2 flex-item larger-view-option" >
-                        <img src="./assets/img/productions/production-9.jpg" alt="" class="i3 flex-item larger-view-option">
-                    </div>
+                        <div class="img-container">
+                            <img src="./assets/img/productions/production-9.jpg" alt="" class="i3 flex-item larger-view-option">
+                        </div>
+
                 </div>
 
             </div>
