--- a/resume.html
+++ b/resume.html
@@ -111,7 +111,7 @@
 <body class="resume">
 
     <link rel="stylesheet" href="./assets/style/style.css">
-    <header>
+    <header class="header">
         <div class="header-inner">
 
             <div class="left-container">
@@ -247,13 +247,7 @@
                     </div>
 
                     <div class="socials-wrapper-item">
-                        <a href="https://resumes.actorsaccess.com/omrajraut">
-                            <img src="./assets/icons/backstage_logo.png" alt="">
-                        </a>
-                    </div>
-
-                    <div class="socials-wrapper-item">
-                        <a href="https://resumes.actorsaccess.com/omrajraut">
+                        <a href="https://vimeo.com/user213916117"> <img class="link">
                             <img src="./assets/icons/vimeo-logo.svg" alt="">
                         </a>
                     </div>
