--- a/video.html
+++ b/video.html
@@ -8,8 +8,8 @@
 </head>
 <body>
         <link rel="stylesheet" href="./assets/style/style.css">
-    <header>
-        <div class="left-container">
+        <header class="header">
+            <div class="left-container">
             <div class="header-name">
                 OM RAJ RAUT
             </div>
